feat(BUX-17): add transaction endpoints
* feat(BUX-14): add balance to /user endpoint

* chore(BUX-14): remove unnecessary logs

* feat(BUX-17): create transaction services and endpoints

* feat(BUX-17): create transaction methods

* chore(BUX-17): add get transactions methods

* feat(BUX-17): finish get transactions endpoints

* fix(BUG-17): remove local replace

* fix(BUG-17): tidy go.mod
